# Build-a-django-REST-API

./: Makefile  README.md  celerybeat-schedule  db.sqlite3  pyproject.toml
.github/workflows/: deploy.yml
api/: serializers.py  urls.py  views.py
cfehome/: celery.py  routers.py  settings.py  urls.py
products/: admin.py  filters.py  forms.py  index.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py  viewsets.py
products/migrations/: 0001_initial.py  0002_alter_product_user.py  0003_product_public.py  0004_alter_product_public.py  0005_product_created_at.py
py_client/: basic.py  create.py  detail.py  list.py  not_found.py  update.py
search/: admin.py  models.py  tests.py  urls.py  views.py
