[tool.poetry]
name = "drf"
version = "0.1.0"
description = ""
authors = ["SahilMehdiyev <branchsahil@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
djangorestframework = "^3.15.2"
pyyaml = "^6.0.2"
requests = "^2.32.3"
django-cors-headers = "^4.6.0"
django-admin-soft-dashboard = "^1.0.22"
django-unfold = "^0.42.0"
django-jet-reboot = "1.3.1"
six = "^1.16.0"
django-jazzmin = "^3.0.1"
djangorestframework-simplejwt = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
