[tool.poetry]
name = "drf"
version = "0.1.0"
description = ""
authors = ["SahilMehdiyev <branchsahil@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
djangorestframework = "^3.15.2"
pyyaml = "^6.0.2"
requests = "^2.32.3"
django-cors-headers = "^4.6.0"
django-admin-soft-dashboard = "^1.0.22"
django-unfold = "^0.42.0"
django-jet-reboot = "1.3.1"
six = "^1.16.0"
django-jazzmin = "^3.0.1"
djangorestframework-simplejwt = "^5.3.1"
django-colorfield = "^0.11.0"
django-admin-interface = "^0.29.4"
algoliasearch-django = ">=4.0,<5.0"
algoliasearch = "^4.12.0"
django-filter = "^24.3"
celery = "^5.4.0"
redis = "^5.2.1"
django-celery-beat = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
